--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -7,7 +7,8 @@ html(lang='cn')
         meta(http-equiv="X-UA-Compatible" content="ie=edge")
         title frontEnd_automation
         link(rel="stylesheet" href="https://cdn.bootcss.com/normalize/8.0.1/normalize.min.css" type="text/css")
-        link(rel="stylesheet" href="/css/scss/style.css" type="text/css")
+        //- link(rel="stylesheet" href="/css/scss/style.css" type="text/css")
+        link(rel="stylesheet" href="/css/less/style.css" type="text/css")
     body
         div
         img(src='/images/testImg.jpg' alt="头像")
